@@ -1,4 +1,8 @@
 2003-11-20 nalin
+	* src/initopts.c(_pam_krb5_set_init_opts): set the ticket lifetime,
+	if configured, as an initopt.
+
+2003-11-20 nalin
 	* src/options.c, src/options.h: add code for parsing a "mappings"
 	setting.  Reintroduce ticket_lifetime, which I mistakenly thought was
 	a libdefault setting now.
